# workspaceloader

./: CHANGELOG.md  CMakeLists.txt  ProjectOpener.code-workspace  README.md  close_ProjectOpener.ps1  projects.json
build-rehearsal/: ALL_BUILD.vcxproj  CMakeCache.txt  ProjectOpener.slnx  ProjectOpener.vcxproj  ProjectOpener.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build-rehearsal/.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake  QtDeployTargets-Debug.cmake  QtDeployTargets-MinSizeRel.cmake  QtDeployTargets-RelWithDebInfo.cmake  QtDeployTargets-Release.cmake
build-rehearsal/ProjectOpener.dir/Release/: ProjectOpener.exe.recipe
build-rehearsal/ProjectOpener.dir/Release/ProjectOpener.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build-rehearsal/ProjectOpener_autogen/: mocs_compilation_Release.cpp
build-rehearsal/ProjectOpener_autogen/include_Release/UVLADIE3JM/: moc_ProjectLauncherWidget.cpp  moc_ProjectLauncherWidget.cpp.d
build-rehearsal/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
build-rehearsal/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.write.1.tlog
build-rehearsal/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
build-rehearsal/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
doc/docs/: development-environment.md
src/: ProjectLauncherWidget.cpp  ProjectLauncherWidget.h  main.cpp
